# telegrapher

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: bot.rs  lib.rs  methods.rs  params.rs  requests.rs  responses.rs
core/src/methods/: command.rs  media.rs  message.rs  updates.rs  user.rs  webhook.rs
core/src/models/: animation.rs  audio.rs  boost.rs  business.rs  chat.rs  chat_member.rs  chosen_inline_result.rs  contact.rs  document.rs  file.rs  forum.rs  game.rs  giveaway.rs  inline_query.rs  invoice.rs  link_preview.rs  location.rs  menu_button.rs  message.rs  message_entity.rs  order_info.rs  parse_mode.rs  passport_element_error.rs  photo_size.rs  poll.rs  pre_check_query.rs  proximity_alert_trigger.rs  reaction.rs  reply.rs  reply_markup.rs  shipping_query.rs  sticker.rs  sticker_set.rs  successful_payment.rs  update.rs  user.rs  venue.rs  video.rs  video_chat.rs  video_note.rs  (+3 more)
core/src/params/: callback_query_param.rs  command_params.rs  get_updates_params.rs  media_params.rs  message_params.rs  send_media.rs  updates_params.rs  webhook_param.rs
examples/: bot_start.rs  macros_test.rs  main.rs  send_document.rs  send_message_with_channel.rs  send_photo.rs  test_task.rs  webhook.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bot.rs  lib.rs  methods.rs  models.rs  params.rs  requests.rs  responses.rs
src/methods/: command.rs  message.rs  updates.rs  user.rs
src/models/: allowed_update.rs  animation.rs  business.rs  callback_query.rs  chat.rs  chat_member.rs  chosen_inline_result.rs  command.rs  dice.rs  forum.rs  game.rs  giveaway.rs  inline_query.rs  invoice.rs  link_preview.rs  location.rs  mask_position.rs  menu_button.rs  message.rs  message_entity.rs  order_info.rs  passort_element_error.rs  passport_data.rs  photo_size.rs  poll.rs  pre_check_query.rs  proximity_alert_triggred.rs  reaction.rs  reply.rs  reply_markup.rs  shipping_query.rs  sticker.rs  sticker_set.rs  story.rs  successful_payment.rs  update.rs  user.rs  venue.rs  video.rs  video_chat.rs  (+2 more)
src/params/: get_updates.rs  send_message.rs  (+1 more)
