[workspace]
members = ["core", "macros"]
resolver = "2"

[package]
name = "telegrapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
core = { path = "core" }
macros = { path = "macros" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"