[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "blocking",
    "stream",
] }
async-trait = "0.1"
serde_urlencoded = "0.7"
derive_builder = "0.20.0"
once_cell = "1.19.0"
async-std = "1.10.0"
